--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,9 @@ android {
     }
 }
 
+
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -27,4 +28,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     compile 'org.apache.httpcomponents:httpcore:4.4.4'
     compile 'com.android.support:recyclerview-v7:28.0.0'
+    compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    compile 'com.leon:lfilepickerlibrary:1.8.0'
+    compile 'com.github.angads25:filepicker:1.1.1'
 }
